Fix background issue on mobile

--- a/src/app/components/Layout.scss
+++ b/src/app/components/Layout.scss
@@ -88,7 +88,7 @@
         flex-shrink: 1;
         flex-grow: 1;
 
-        background: var(--primary-color);
+        background-color: var(--paper-color);
 
         @media screen and (max-width: $smallScreen - 1px) {
           border-radius: $radiusCorner $radiusCorner 0 0;
@@ -138,16 +138,6 @@
         main {
           width: 100%;
           height: 100%;
-
-
-
-          @media screen and (max-width: $smallScreen - 1px) {
-            background-color: var(--paper-color);
-          }
-
-          @media screen and (min-width: $smallScreen) {
-            background-color: var(--background-color);
-          }
 
           @media screen and (min-width: $smallScreen) {
             position: relative;
